# wordnet-ls

./: Cargo.nix  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  vim.lua
benches/: wordnet.rs
src/: lib.rs  main.rs  open_files.rs  wordnet.rs
src/wordnet/: data.rs  index.rs  lemmatize.rs  mod.rs  pointer.rs  pos.rs  relation.rs  synset.rs  utils.rs  wordnet.rs
