[package]
name = "lls"
version = "0.1.0"
authors = ["Jeffas <dev@jeffas.io>"]
edition = "2018"

[dependencies]
lsp-server = "0.3.1"
lsp-types = "0.73.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
regex = "1.5.5"
hex = "0.4.2"
dirs = "2.0.2"

[lib]
name = "lls_lib"
path = "src/lib.rs"

[[bin]]
name = "lls"
path = "src/main.rs"
