[package]
name = "lls"
version = "0.1.0"
authors = ["Jeffas <dev@jeffas.io>"]
edition = "2021"

[dependencies]
lsp-server = "0.7.6"
lsp-types = "0.95.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
regex = "1.10.4"
hex = "0.4.3"
dirs = "5.0.1"

[lib]
name = "lls_lib"
path = "src/lib.rs"

[[bin]]
name = "lls"
path = "src/main.rs"
